@@ -12,6 +12,7 @@
 #include <stdio.h>
 #include <ctype.h>
 #include <sys/time.h>
+#include <time.h>
 
 #include "ntpd.h"
 #include "ntp_io.h"
